Revert "little change"
This reverts commit f72b49ce79838958cecd96f9b86113452342a065.

--- a/web con plantilla final/index.html
+++ b/web con plantilla final/index.html
@@ -32,7 +32,7 @@
 <div id="wrapper">
 	<!-- start header -->
 	<header>
-<!--			<div class="top">
+			<div class="top">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6">
@@ -53,7 +53,7 @@
 						</div>
 					</div>
 				</div>
-			</div>	-->
+			</div>	
 			
         <div class="navbar navbar-default navbar-static-top">
             <div class="container">
@@ -126,7 +126,7 @@
             <ul class="slides">
               <li>
                 <img src="img/slides/flexslider/1.jpg" alt="" />
-                <div class="flex-ncaption">
+                <div class="flex-caption">
                     <h3>Modern Design</h3> 
 					<p>Duis fermentum auctor ligula ac malesuada. Mauris et metus odio, in pulvinar urna</p> 
 					<a href="#" class="btn btn-theme">Learn More</a>
