--- a/web con plantilla final/users.html
+++ b/web con plantilla final/users.html
@@ -41,51 +41,20 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="199" height="52" /></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/Logo.png" alt="" width="199" height="52" /></a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
-                        <li class="dropdown active">
-							<a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Home <i class="fa fa-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="index.html">Home slider 1</a></li>
-                                <li><a href="index2.html">Home slider 2</a></li>
-								
-                            </ul>				
-						
+                        <li>
+							<a href="#">Home </a>
 						</li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">About <i class="fa fa-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="typography.html">Typography</a></li>
-                                <li><a href="components.html">Components</a></li>
-								<li><a href="pricing-box.html">Pricing box</a></li>
-								<li class="dropdown-submenu">
-									<a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown">Pages</a>
-									<ul class="dropdown-menu">
-										<li><a href="fullwidth.html">Full width</a></li>
-										<li><a href="right-sidebar.html">Right sidebar</a></li>
-										<li><a href="left-sidebar.html">Left sidebar</a></li>
-										<li><a href="comingsoon.html">Coming soon</a></li>
-										<li><a href="search-result.html">Search result</a></li>
-										<li><a href="404.html">404</a></li>
-										<li><a href="register.html">Register</a></li>
-										<li><a href="login.html">Login</a></li>
-									</ul>	
-								</li>
-                            </ul>
-                        </li>
                         <li><a href="portfolio.html">Proyects</a></li>
-                        <li class="dropdown"><a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Blog <i class="fa fa-angle-down"></i></a>
-							<ul class="dropdown-menu">
-                                <li><a href="blog-rightsidebar.html">Blog right sidebar</a></li>
-                                <li><a href="blog-leftsidebar.html">Blog left sidebar</a></li>
-								<li><a href="post-rightsidebar.html">Post right sidebar</a></li>
-								<li><a href="post-leftsidebar.html">Post left sidebar</a></li>
-                            </ul>
-						</li>
+                        <li><a href="#" >Blog</a>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="users.html">Users</a></li>
+                        <li>
+                            <a href="#" >About</a>                           
+                        </li>                       
+                        <li><a href="users.html">User</a></li>
                     </ul>
                 </div>
             </div>
