DONE (some screens)
Index, register (sign up, sign in), proyects and blog estrctured and
finished.

--- a/web con plantilla final/proyects.html
+++ b/web con plantilla final/proyects.html
@@ -78,7 +78,7 @@
 								</li>
                             </ul>
                         </li>-->
-                        <li><a href="blog-rightsidebar.html">Noticias </a></li>
+                        <li><a href="blog.html">Noticias </a></li>
 							<!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
                         
                         <li><a href="contact.html">Contacto </a></li>
