--- a/web con plantilla final/blog.html
+++ b/web con plantilla final/blog.html
@@ -50,10 +50,10 @@
                         <li><a href="contact.html">Contacto </a></li>
                         <li><a href="about.html">Sobre nosotros </a></li>
                         <li class="dropdown">
-                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Registro <i class="fa fa-angle-down"></i></a>
+                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="register.html">Únete</a></li>
-                                <li><a href="login.html">Tu cuenta</a></li>
+                                <li><a href="login.html">Inicia sesión</a></li>
                                 </ul>
                         </li>
                     </ul>
