--- a/web con plantilla final/login.html
+++ b/web con plantilla final/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>WADWalfram - Tu cuenta</title>
+<title>WADWalfram - Inicia sesión</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="Bootstrap 3 template for corporate business" />
 <!-- css -->
@@ -64,10 +64,10 @@
                         <li><a href="contact.html">Contacto </a></li>
                         <li><a href="about.html">Sobre nosotros </a></li>
                         <li class="dropdown active">
-                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Registro <i class="fa fa-angle-down"></i></a>
+                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="register.html">Únete</a></li>
-                                <li><a href="login.html">Tu cuenta</a></li>
+                                <li><a href="login.html">Inicia sesión</a></li>
                                 </ul>
                         </li>
                     </ul>
@@ -84,7 +84,7 @@
 			<div class="col-lg-12">
 				<ul class="breadcrumb">
 					<li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
-					<li class="active">Tu cuenta</li>
+					<li>Cuenta</li><li class="active">Inicia sesión</li>
 				</ul>
 			</div>
 		</div>
