--- a/web con plantilla final/project_tim.html
+++ b/web con plantilla final/project_tim.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -34,7 +34,6 @@
             <div class="top hide">
                 <div class="container">
                     <div class="row">
-
                         <div class="col-md-6">
                             <div id="sb-search" class="sb-search">
                                 <form>
@@ -43,28 +42,24 @@
                                     <span class="sb-icon-search" title="Click to start searching"></span>
                                 </form>
                             </div>
-
-
                         </div>
                     </div>
                 </div>
             </div>
 
-
+        <nav>
             <div class="navbar navbar-default navbar-static-top">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="199" height="52" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Inicio</a></li>
-                            <li class="active"><a href="proyects.html">Proyectos </a></li>
+                            <li class="active"><a href="proyects.html">Proyectos</a></li>
                             <!--  <li class="dropdown">
                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Proyectos <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
@@ -80,13 +75,13 @@
 								</li>
                             </ul>
                         </li>-->
-                            <li><a href="blog.html">Noticias </a></li>
+                            <li><a href="blog.html">Noticias</a></li>
                             <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
-                            <li><a href="contact.html">Contacto </a></li>
-                            <li><a href="about.html">Sobre nosotros </a></li>
+                            <li><a href="contact.html">Contacto</a></li>
+                            <li><a href="about.html">Sobre nosotros</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
+                                <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="register.html">Únete</a></li>
                                     <li><a href="login.html">Inicia sesión</a></li>
@@ -96,17 +91,20 @@
                     </div>
                 </div>
             </div>
+          </nav>
         </header>
 
         <!-- end header -->
-
 
         <section id="content">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h4 class="heading">Nos proyectamos</h4>
+                      <header>
+                        <h4 class="heading">Ensayo clínico liderado por Dr. Timothy Barrett</h4>
+                      </header>
 
+<!--
                         <div id="filters-container" class="cbp-l-filters-button">
                             <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">Todos
                                 <div class="cbp-filter-counter"></div>
@@ -117,6 +115,7 @@
                             <div data-filter=".web-design" class="cbp-filter-item">2016
                                 <div class="cbp-filter-counter"></div>
                             </div>
+
                             <div data-filter=".graphic" class="cbp-filter-item">2015
                                 <div class="cbp-filter-counter"></div>
                             </div>
@@ -124,7 +123,6 @@
                                 <div class="cbp-filter-counter"></div>
                             </div>
                         </div>
-
 
                         <div id="grid-container" class="cbp-l-grid-projects">
                             <ul>
@@ -136,13 +134,13 @@
                                         <div class="cbp-caption-activeWrap">
                                             <div class="cbp-l-caption-alignCenter">
                                                 <div class="cbp-l-caption-body">
-                                                    <a href="img/works/1big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 1<br>fecha lanzamiento">Leer más</a>
+                                                   <a href="img/works/1big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 1<br>fecha lanzamiento">Leer más</a>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="cbp-l-grid-projects-title">Proyecto 1</div>
-                                    <div class="cbp-l-grid-projects-desc">fecha lanzamiento</div>
+                                    <div class="cbp-l-grid-projects-title">Ensayo clínico del Dr. Fumihiko Urano</div>
+                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
                                 </li>
                                 <li class="cbp-item web-design logo">
                                     <div class="cbp-caption">
@@ -157,8 +155,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="cbp-l-grid-projects-title">Proyecto 2</div>
-                                    <div class="cbp-l-grid-projects-desc">fecha lanzamiento</div>
+                                    <div class="cbp-l-grid-projects-title">Ensayo clínico liderado por Dr. Timothy Barrett</div>
+                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
                                 </li>
                                 <li class="cbp-item graphic logo">
                                     <div class="cbp-caption">
@@ -168,15 +166,15 @@
                                         <div class="cbp-caption-activeWrap">
                                             <div class="cbp-l-caption-alignCenter">
                                                 <div class="cbp-l-caption-body">
-
-                                                    <a href="http://vimeo.com/14912890" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 3<br>fecha lanzamiento">Leer más</a>
+                                                   <a href="http://vimeo.com/14912890" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 3<br>fecha lanzamiento">Leer más</a>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="cbp-l-grid-projects-title">Proyecto 3</div>
-                                    <div class="cbp-l-grid-projects-desc">fecha lanzamiento</div>
+                                    <div class="cbp-l-grid-projects-title">Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud</div>
+                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
                                 </li>
+
                                 <li class="cbp-item web-design graphic">
                                     <div class="cbp-caption">
                                         <div class="cbp-caption-defaultWrap">
@@ -213,13 +211,42 @@
                                 </li>
 
 
+
+
+
                             </ul>
                         </div>
 
                         <div class="cbp-l-loadMore-button">
                             <a href="ajax/loadMore.html" class="cbp-l-loadMore-button-link">Cargar más</a>
                         </div>
-
+-->
+                     <table class="table table-bordered">                      
+                           <th>Presupuesto total</th>
+                           <td>113.529 euros</td>
+                        </tr>
+                        <tr>
+                           <th>Presupuesto concedido</th>
+                           <td>105.529 euros</td>
+                        </tr>
+                        <tr>
+                           <th>Financiación pendiente</th>
+                           <td>8.000 euros</td>
+                        </tr>
+                        <tr>
+                           <th>Duración</th>
+                           <td>36 meses</td>
+                        </tr>
+                        <tr>
+                           <th>Año de inicio previsto</th>
+                           <td>2018</td>
+                        </tr>
+                     </table>                      
+                     <article>                              
+                      <p>Consiste en valorar la seguridad y efectividad de un principio activo en pacientes diagnosticados de síndrome de Wolfram mediante la puesta en marcha del ensayo clínico simultáneamente en Reino Unido, Francia y España. La repercusión de tal ensayo recae en que no existe actualmente un tratamiento farmacológico para dicha enfermedad, aun así, existen algunas vías alternativas que pueden ayudar a paliar y/o mejorar ciertos aspectos de la enfermedad.</p>
+                      <p>Los resultados que se pretenden evaluar son: los efectos del ácido valproico sobre la visión y sobre agudeza visual y sobre el volumen del vástago del cerebro como un sustituto de la neurodegeneración.</p> 
+                      <p>El reclutamiento de los pacientes se estima que será para septiembre u octubre de 2017 y la administración del fármaco, probablemente, empezará en febrero de 2018.</p>
+                     </article>                              
                     </div>
                 </div>
             </div>
@@ -232,11 +259,10 @@
                         <div class="widget">
                             <h4>Estamos en: </h4>
                             <address>
-					<strong>Nombre Asociación</strong><br>
-					 dirección<br>
-					 dirección</address>
+					<strong>Asociación Española para la Investigación y Ayuda a personas con Síndrome de Wolfram</strong><br>
+					 C/ Picadilly, nº 7, Almería, Andalucía</address>
                             <p>
-                                <i class="icon-phone"></i> número de teléfono
+                                <i class="icon-phone"></i>653 115 307
                                 <br>
                                 <i class="icon-envelope-alt"></i> email@domainname.com
                             </p>
@@ -246,7 +272,7 @@
                         <div class="widget">
                             <h4>Información</h4>
                             <ul class="link-list">
-                                <li><a href="#">Terminos y condiciones</a></li>
+                                <li><a href="#">Términos y condiciones</a></li>
                                 <li><a href="#">Política de privacidad</a></li>
                                 <li><a href="contact.html">Contáctanos</a></li>
                             </ul>
@@ -257,9 +283,12 @@
                         <div class="widget">
                             <h4>Páginas relacionadas</h4>
                             <ul class="link-list">
-                                <li><a href="#">Página 1</a></li>
-                                <li><a href="#">Página 2</a></li>
-                                <li><a href="#">Página 3</a></li>
+                                <li><a href="http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=ES&Expert=3463.0">ORPHANET – Síndrome de Wolfram</a></li>
+                                <li><a href="http://www.association-du-syndrome-de-wolfram.org/faire-un-don.html">Asociación Francesa del síndrome de Wolfram</a></li>
+                                <li><a href="http://wolframsyndrome.dom.wustl.edu/">Universidad de Washington en St. Louis – Síndrome de Wolfram</a></li>
+                                <li><a href="http://aswolfram.org/">Asociación Española para la Investigación y Ayuda al Síndrome de Wolfram</a></li>
+                                <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
+                                <li><a href="http://www.euro-wabb.org/es/">EURO-WABB</a></li>
                             </ul>
                         </div>
                     </div>
@@ -276,6 +305,7 @@
                     </div>
                 </div>
             </div>
+<!--
             <div id="sub-footer">
                 <div class="container">
                     <div class="row">
@@ -288,6 +318,7 @@
                                 </div>
                             </div>
                         </div>
+-->
                         <!--<div class="col-lg-6">
 					<ul class="social-network">
 						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
