--- a/web con plantilla final/register.html
+++ b/web con plantilla final/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -28,7 +28,7 @@
     <div id="wrapper">
         <!-- start header -->
         <header>
-
+<nav>
             <div class="navbar navbar-default navbar-static-top">
                 <div class="container">
                     <div class="navbar-header">
@@ -42,7 +42,7 @@
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Inicio</a></li>
-                            <li><a href="proyects.html">Proyectos </a></li>
+                            <li><a href="projects.html">Proyectos</a></li>
                             <!--  <li class="dropdown">
                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Proyectos <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
@@ -58,11 +58,11 @@
 								</li>
                             </ul>
                         </li>-->
-                            <li><a href="blog.html">Noticias </a></li>
+                            <li><a href="blog.html">Noticias</a></li>
                             <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
-                            <li><a href="contact.html">Contacto </a></li>
-                            <li><a href="about.html">Sobre nosotros </a></li>
+                            <li><a href="contact.html">Contacto</a></li>
+                            <li><a href="about.html">Sobre nosotros</a></li>
                             <li class="dropdown active">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Registro <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
@@ -74,6 +74,7 @@
                     </div>
                 </div>
             </div>
+</nav>
         </header>
         <!-- end header -->
         <section id="inner-headline">
@@ -130,7 +131,7 @@
                             <div class="row">
 
                                 <div class="col-xs-11 col-md-11">
-                                    Haciendo click en <strong class="label label-primary">Regístrate</strong>, aceptas las <a href="#" data-toggle="modal" data-target="#t_and_c_m">condiciones y términos de uso</a> de esta página web, incluído el uso de cookies.
+                                    Haciendo click en <strong class="label label-primary">Regístrate</strong>, aceptas las <a href="#" data-toggle="modal" data-target="#t_and_c_m">condiciones y términos de uso</a> de esta página web, incluido el uso de cookies.
                                 </div>
                             </div>
 
@@ -139,7 +140,7 @@
                                 <div class="col-xs-12 col-md-6">
                                     <input type="submit" value="Regístrate" class="btn btn-theme btn-block btn-lg" tabindex="7">
                                 </div>
-                                <div class="col-xs-12 col-md-6">¿Tienes ya una cuenta? <a href="login.html">Entra ya</a></div>
+                                <div class="col-xs-12 col-md-6">¿Tienes ya una cuenta? <a href="login.html">¡Entra en tu cuenta!</a></div>
                             </div>
                         </form>
                     </div>
@@ -174,11 +175,10 @@
                         <div class="widget">
                             <h4>Estamos en: </h4>
                             <address>
-					<strong>Nombre Asociación</strong><br>
-					 dirección<br>
-					 dirección</address>
+					<strong>Asociación Española para la Investigación y Ayuda al Síndrome de Wolfram</strong><br>
+					 C/ Picadilly, nº 7, Almería, Andalucía</address>
                             <p>
-                                <i class="icon-phone"></i> número de teléfono
+                                <i class="icon-phone"></i>653 115 307
                                 <br>
                                 <i class="icon-envelope-alt"></i> email@domainname.com
                             </p>
@@ -188,7 +188,7 @@
                         <div class="widget">
                             <h4>Información</h4>
                             <ul class="link-list">
-                                <li><a href="#">Terminos y condiciones</a></li>
+                                <li><a href="#">Términos y condiciones</a></li>
                                 <li><a href="#">Política de privacidad</a></li>
                                 <li><a href="contact.html">Contáctanos</a></li>
                             </ul>
@@ -199,9 +199,12 @@
                         <div class="widget">
                             <h4>Páginas relacionadas</h4>
                             <ul class="link-list">
-                                <li><a href="#">Página 1</a></li>
-                                <li><a href="#">Página 2</a></li>
-                                <li><a href="#">Página 3</a></li>
+                                <li><a href="http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=ES&Expert=3463.0">ORPHANET – Síndrome de Wolfram</a></li>
+                                <li><a href="http://www.association-du-syndrome-de-wolfram.org/faire-un-don.html">Asociación Francesa del síndrome de Wolfram</a></li>
+                                <li><a href="http://wolframsyndrome.dom.wustl.edu/">Universidad de Washington en St. Louis – Síndrome de Wolfram</a></li>
+                                <li><a href="http://aswolfram.org/">Asociación Española para la Investigación y Ayuda al síndrome de Wolfram</a></li>
+                                <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
+                                <li><a href="http://www.euro-wabb.org/es/">EURO-WABB</a></li>
                             </ul>
                         </div>
                     </div>
@@ -222,13 +225,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
-                            <div class="copyright">
+<!--                            <div class="copyright">
                                 <p>&copy; Sailor Theme - All Right Reserved</p>
                                 <div class="credits">
-
                                     <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
                                 </div>
                             </div>
+-->
                         </div>
                         <!--<div class="col-lg-6">
 					<ul class="social-network">
