contact html and about html have been created, all the phtotos have been added

--- a/web con plantilla final/index.html
+++ b/web con plantilla final/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WADWalfram - Inicio</title>
+    <title>WADWolfram - Inicio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bootstrap 3 template for corporate business" />
     <!-- css -->
@@ -85,7 +85,7 @@
                             <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
                             <li><a href="contact.html">Contacto</a></li>
-                            <li><a href="about.html">Sobre nosotros</a></li>
+                            <li><a href="about.html">Sobre sus desarrolladores</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
@@ -110,7 +110,7 @@
                         <div id="main-slider" class="main-slider flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="fumi urano.jpg" alt="Foto del proyecto" />
+                                    <img src="fotos/fumi urano.jpg" alt="Foto del proyecto" />
                                     <div class="flex-caption">
                                         <h3>Ensayo clínico del Dr. Fumihiko Urano</h3>
                                         <p>Consiste en determinar la seguridad y efectividad de un medicamento para las personas con síndrome de Wolfram con la finalidad de retrasar la progresión de dicho síndrome.</p>
@@ -126,11 +126,19 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="img/slides/flexslider/3.jpg" alt="Foto del proyecto" />
+                                    <img src="fotos/pacientes.jpg" alt="Foto del proyecto" />
                                     <div class="flex-caption">
                                         <h3>Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud</h3>
                                         <p>Estudio del fenotipo clínico y curso evolutivo de los pacientes españoles con Síndrome de Wolfram.</p>
                                         <a href="project_salud.html" class="btn btn-theme">Leer más</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="fotos/psicologa.jpg" alt="Foto del proyecto" />
+                                    <div class="flex-caption">
+                                        <h3>Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares</h3>
+                                        <p>Consiste en dar una atención e intervención bio-psicosocial que mejore la calidad de vida de las personas afectadas y de sus familiares.</p>
+                                        <a href="project_psicosocial.html" class="btn btn-theme">Leer más</a>
                                     </div>
                                 </li>
                             </ul>
@@ -266,13 +274,14 @@
                             <div class="col-sm-6 col-lg-6" >
                                <div class="widget">
                                     <h4 class="widgetheading">Noticias de interés</h4>
-                                       <ul class="link-list">
-                                          <li> <a href="blog.html> <img src="#" alt="Foto de la noticia" /> </a>
-                                          <a href="blog.html">¿En qué consiste el síndrome de Wolfram?</a></li>         
-                                          <li> <a href="blog.html"> <img src="#" alt="Foto de la noticia" /> </a>
-                                          <a href="blog.html">Actividades realizadas por la asociación</a></li>         
-                                       </ul>
-                                       <br>
+                                      <ul class="link-list">
+                                          <li> <a href="blog.html#sindromeWolfram"> <img src="fotos/libro.jpg" alt="Foto de la noticia" /> </a>
+                                          <a href="blog.html#sindromeWolfram">¿En qué consiste el síndrome de Wolfram?</a></li>         
+                                          <li> <a href="blog.html#actividades"> <img src="fotos/medicos.jpg" alt="Foto de la noticia" /> </a>
+                                          <a href="blog.html#actividades">Actividades realizadas por la asociación</a></li>         
+                                          <li> <a href="blog.html#anulacion"> <img src="fotos/noticia.jpg" alt="Foto de la noticia" /> </a>
+                                          <a href="blog.html#anulacion">Anulación de la unidad multidisciplinar de Wolfram</a></li>         
+                                      </ul>
 <!--
                                     <ul class="recent">
                                         <li>
