--- a/web con plantilla final/project_psicosocial.html
+++ b/web con plantilla final/project_psicosocial.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WADWalfram - Proyectos</title>
+    <title>WADWolfram - Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bootstrap 3 template for corporate business" />
     <!-- css -->
@@ -92,6 +92,20 @@
                 </div>
             </div>
           </nav>
+        <section id="inner-headline">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <ul class="breadcrumb">
+                            <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                            <li><a href="projects.html">Proyectos</a></li>
+                            <li class="active">Proyecto</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         </header>
 
         <!-- end header -->
@@ -101,7 +115,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                       <header>
-                        <h4 class="heading">Ensayo clínico del Dr. Fumihiko Urano</h4>
+                        <h4 class="heading">Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares</h4>
                       </header>
 
 <!--
@@ -139,7 +153,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="cbp-l-grid-projects-title">Ensayo clínico del Dr. Fumihiko Urano</div>
+                                    <div class="cbp-l-grid-projects-title">Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares</div>
                                     <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
                                 </li>
                                 <li class="cbp-item web-design logo">
@@ -150,7 +164,7 @@
                                         <div class="cbp-caption-activeWrap">
                                             <div class="cbp-l-caption-alignCenter">
                                                 <div class="cbp-l-caption-body">
-                                                    <a href="img/works/2big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 2<br>fecha lanzamiento">Leer más</a>
+                                                    <a href="img/works/2big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 2<br>Fecha lanzamiento">Leer más</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -221,31 +235,9 @@
                             <a href="ajax/loadMore.html" class="cbp-l-loadMore-button-link">Cargar más</a>
                         </div>
 -->
-                     <table class="table table-bordered">                      
-                        <tr>
-                           <th>Presupuesto total</th>
-                           <td>60.000 euros</td>
-                        </tr>
-                        <tr>
-                           <th>Presupuesto concedido</th>
-                           <td>0 euros</td>
-                        </tr>
-                        <tr>
-                           <th>Financiación pendiente
-                           <td>60.000 euros</td>
-                        </tr>
-                        <tr>
-                           <th>Duración</th>
-                           <td>9 meses</td>
-                        </tr>
-
-                        <tr>
-                           <th>Año de inicio previsto</th>
-                           <td>2018</td>
-                        </tr>
-                     </table>                      
                      <article>                              
-                     Consiste en determinar la seguridad y efectividad de un medicamento para las personas, tanto niños como adultos, con síndrome de Wolfram con la finalidad de retrasar la progresión de dicho síndrome mediante los parámetros de la agudeza visual, del equilibrio y bioquímicos. Previamente se realizarán unos controles exhaustivos de los pacientes al igual que una vez finalizado el ensayo clínico.
+                      <p>Consiste en la investigación, detección de necesidades y atención de éstas tanto desde el ámbito biológico como psicológico y social intentando siempre dar una atención e intervención individualizada que mejore la calidad de vida de las personas afectadas por el SW y sus familias así como llevar a cabo actividades de concienciación y sensibilización respecto a las ER.</p>
+                      <p>Actualmente, este proyecto se encuentra subvencionado por Fundación Universia y Fundación Konecta (2015) y Obra Social la Caixa (2016).</p>
                      </article>                              
                     </div>
                 </div>
