--- a/web con plantilla final/projects.html
+++ b/web con plantilla final/projects.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WADWalfram - Proyectos</title>
+    <title>WADWolfram - Proyectos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bootstrap 3 template for corporate business" />
     <!-- css -->
@@ -139,7 +139,7 @@
                                         <div class="cbp-caption-activeWrap">
                                             <div class="cbp-l-caption-alignCenter">
                                                 <div class="cbp-l-caption-body">
-                                                   <a href="img/works/1big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 1<br>fecha lanzamiento">Leer más</a>
+                                                   <a href="img/works/1big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 1<br>Fecha lanzamiento">Leer más</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -215,6 +215,26 @@
                                     </div>
                                     <div class="cbp-l-grid-projects-title">Proyecto 5</div>
                                     <div class="cbp-l-grid-projects-desc">fecha lanzamiento</div>
+                                </li>
+                                <li class="cbp-item graphic">
+                                    <div class="cbp-caption">
+                                        <div class="cbp-caption-defaultWrap">
+                                            <img src="img/works/1.jpg" alt="" />
+                                        </div>
+
+                                    <div class="cbp-l-grid-projects-title">Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares</div>
+                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
+
+
+                                        <div class="cbp-caption-activeWrap">
+                                            <div class="cbp-l-caption-alignCenter">
+                                                <div class="cbp-l-caption-body">
+                                                   <a href="img/works/1big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 1<br>fecha lanzamiento">Leer más</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </li>
 -->
                             </ul>
