--- a/web con plantilla final/login.html
+++ b/web con plantilla final/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>WADWalfram - Inicia sesión</title>
+<title>WADWolfram - Inicia sesión</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="Bootstrap 3 template for corporate business" />
 <!-- css -->
@@ -62,7 +62,7 @@
 							<!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
                         
                         <li><a href="contact.html">Contacto</a></li>
-                        <li><a href="about.html">Sobre nosotros</a></li>
+                        <li><a href="about.html">Sobre sus desarrolladores</a></li>
                         <li class="dropdown active">
                              <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
