--- a/web con plantilla final/project_tim.html
+++ b/web con plantilla final/project_tim.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WADWalfram - Proyectos</title>
+    <title>WADWolfram - Ensayo clínico liderado por Dr. Timothy Barrett</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bootstrap 3 template for corporate business" />
     <!-- css -->
@@ -92,6 +92,21 @@
                 </div>
             </div>
           </nav>
+
+        <section id="inner-headline">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <ul class="breadcrumb">
+                            <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                            <li><a href="projects.html">Proyectos</a></li>
+                            <li class="active">Proyecto</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         </header>
 
         <!-- end header -->
