--- a/web con plantilla final/register.html
+++ b/web con plantilla final/register.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WADWalfram - Únete</title>
+    <title>WADWolfram - Únete</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bootstrap 3 template for corporate business" />
     <!-- css -->
@@ -62,7 +62,7 @@
                             <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
                             <li><a href="contact.html">Contacto</a></li>
-                            <li><a href="about.html">Sobre nosotros</a></li>
+                            <li><a href="about.html">Sobre sus desarrolladores</a></li>
                             <li class="dropdown active">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Registro <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
@@ -75,7 +75,7 @@
                 </div>
             </div>
 </nav>
-        </header>
+
         <!-- end header -->
         <section id="inner-headline">
             <div class="container">
@@ -90,6 +90,7 @@
                 </div>
             </div>
         </section>
+        </header>
         <section id="content">
             <div class="container">
 
